packages/tree-sitter-liftledger/test/corpus/extended.txt
=====================================
Time-based exercises
=====================================

2023-01-01 * Test
    Plank: BW 60s/45s/30s
    Hold: BW 90s

-------------------------------------

(source_file
  (log_entry
    (date)
    (workout_name)
    (logged_exercise
      (logged_exercise_name)
      (exercise_details
        (weight)
        (reps_sets)))
    (logged_exercise
      (logged_exercise_name)
      (exercise_details
        (weight)
        (reps_sets)))))

=====================================
Flexible measurement titles
=====================================

2023-01-01 # Detailed Measurements
    Weight: 75kg
    Body Fat: 15%

-------------------------------------

(source_file
  (measurement_entry
    (date)
    (measurement_title)
    (measurement
      (measurement_name)
      (measurement_value))
    (measurement
      (measurement_name)
      (measurement_value))))

=====================================
Flexible PR titles
=====================================

2023-01-01 ^ Multiple PRs
    Squat: 1RM 140kg
    Bench: 3RM 100kg

-------------------------------------

(source_file
  (pr_entry
    (date)
    (pr_title)
    (pr_record
      (exercise_name)
      (pr_type)
      (weight))
    (pr_record
      (exercise_name)
      (pr_type)
      (weight))))

=====================================
Complex reps patterns
=====================================

2023-01-01 * Test
    Exercise1: 100kg 10/8/6/4/2
    Exercise2: 100kg 5/5/5/4/3/2
    Exercise3: 100kg 15/12/10/8/6/4

-------------------------------------

(source_file
  (log_entry
    (date)
    (workout_name)
    (logged_exercise
      (logged_exercise_name)
      (exercise_details
        (weight)
        (reps_sets)))
    (logged_exercise
      (logged_exercise_name)
      (exercise_details
        (weight)
        (reps_sets)))
    (logged_exercise
      (logged_exercise_name)
      (exercise_details
        (weight)
        (reps_sets)))))